# techdoc-genie

./: .env.example  .gitignore  CURRENT_PROGRESS_SUMMARY.md  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setupdirectory.sh  techdocchattxt1.txt
docker/: Dockerfile  Dockerfile.vectorstore  docker-compose.yml
docs/: Add_Differen_llm_resutls.md  answer-quality-criteria.md  conda_adaptation_guide.md  current_accomplishments.md  db_todo.md  description.md  future_rag_evaluation_enhancements.md  general_sprint_plan.md  highLevelAdaptationguide.md  how_to_use.md  how_to_use_v2.md  mcp-protocol.md  postgres_to_universal.md  quickstart_guide.md  spiint0.md  sprint0.md  sprint1.md  sprint1_llmadd_eval.md  sprint2.md  sprint3.md  sprint4.md  sprit1recap.md  techdoc_genie_rodamap_wishlist.md  updateblog_s0_s2.md
evals/: analyze.py  build_vectorstores.py  chunking_evaluation.py  dashboard.py  diagnose.py  evaluation_configs.json  generate.py  metrics.db  metrics_store.py  prompt_comparison.py  rag_evaluation.py  rag_evaluation_enhanced.py  rag_evaluation_parallel.py  rag_evaluation_parallel_v2.py  retrieval_evaluation.py  test_queries.json  visualize_results.py
scripts/: build_generic_vectorstore.py  build_vectorstore.py  chunk_test.py  download_docs.sh  ingestion_pipeline_real.py  ingestion_test.py  retrieval_test.py  setup_test_data.sh  test_gemini_embedder.py  test_rag_basic.py  test_sentence_transformer_gpu.py  test_sentence_transformers.py
tests/: .env.test  test_chunk_script.py  test_chunking.py  (+8 more)
(+44 files in other folders)
