[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "techdoc-genie"
version = "0.1.0"
description = "A command-line tool for TechDoc Genie operations."
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
]

[project.scripts]
techdoc-genie = "src.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
